tests/sawn/fixtures/valid/22_anonymous_root_array.sawn
// Test: Anonymous root array (JSON root = array of primitives)
[]
  1
  "hello"
  true
  null
