tests/sawn/fixtures/invalid/24_anonymous_root_with_siblings.sawn
// INVALID: Anonymous root with other root-level entries
[]
  1
  2
name="test"
